# tensorgrad

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/: computation_graph_demo.py  gradient_flow_demo.py  spirals_decision_boundary.py  train_mnist.py
tensorgrad/: __init__.py  data.py  engine.py  functional.py  gradcheck.py  graph.py  nn.py  optim.py  viz.py
tests/: conftest.py  test_data.py  test_engine.py  test_gradcheck.py  test_nn.py  test_optim.py  test_viz.py
