[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorgrad"
version = "0.1.0"
description = "Reverse-mode automatic differentiation engine and neural-network library built from scratch (NumPy for array math only)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Akrem Zarrouk" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["tensorgrad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
